k3s/social-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
  namespace: epitweet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      imagePullSecrets:
        - name: epitweet-pull-secret
      containers:
      - name: social-service
        image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-03/social-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
