k3s/social-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: social-service
spec:
  selector:
    app: social-service
  ports:
  - port: 8084
    targetPort: 8084
