k3s/social-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: social-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-service
                port:
                  number: 8084
